fix jumping link styling in header

--- a/src/scss/partials/_header.scss
+++ b/src/scss/partials/_header.scss
@@ -227,6 +227,7 @@ header.hide.active{
 
   .language-link {
     width:auto !important;
+        height: 1.5rem;
 
   }
 
